--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<title>Kate's Portfolio - Home</title>
 </head>
 <body>
-
-<main>
-	<h1>Kate's Portfolio - Home</h1>
-	<p>This website is a work in progress, a first draft of a portfolio site that will eventually live at www.kate.codes
-	<br>
-	I am currently a web development student at Dev Bootcamp, and as I expand my skills this website will improve and get ever closer to a portfolio/resume site I can be proud of.
-	</p>
-</main>
+	<header>
+		<h1>Kate's Portfolio - Home</h1>
+	</header>
+	<main>
+		<p>This website is a work in progress, a first draft of a portfolio site that will eventually live at www.kate.codes</p>
+		<br>
+		<p>I am currently a web development student at Dev Bootcamp, and as I expand my skills this website will improve and get ever closer to a portfolio/resume site I can be proud of.</p>
+	</main>
 
 </body>
 </html>
