Add header and heading, fix formatting errors

--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,11 @@
 	<title>Blog</title>
 </head>
 <body>
+	<header>
+		<h1>Blog</h1>
+	</header>
 	<main>
-	<p>This page may eventually house a blog where I post about my experiences as I enter the tech industry. Feminist and queer commentary is also not out of the question.</p>
+		<p>This page may eventually house a blog where I post about my experiences as I enter the tech industry. Feminist and queer commentary is also not out of the question.</p>
 	</main>
 </body>
 </html>
