Create contact form, with disclaimer, tweak landing page.

--- a/success-contact.html
+++ b/success-contact.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <p>Thank you for reaching out.</p>
-<p><strong>NOTE:</strong> this is not yet a functional form. Please contact me via <a href="https://www.linkedin.com/in/katekourbatova">LinkedIn</a> or <a href="https://twitter.com/SirKate">Twitter</a>> for the time being.</p>
+<p><strong>NOTE:</strong> this is not yet a functional form. Please contact me via <a href="https://www.linkedin.com/in/katekourbatova">LinkedIn</a> or <a href="https://twitter.com/SirKate">Twitter</a> for the time being.</p>
 </body>
 </html>
