Add nav bars to all pages

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,13 @@
 	<header>
 		<h1>Contact me</h1>
 	</header>
-
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="resume.html">Resume</a>
+		<a href="webdev.html">Web Developer</a>
+		<a href="blog.html">Blog</a>
+		<a href="contact.html">Contact</a>
+	</nav>
 	<form name="contact" action="success-contact.html" method="post">
 		<fieldset>
 			<div>
