--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
 	<header>
 		<h1>Kate's Portfolio - Home</h1>
 	</header>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="resume.html">Resume</a>
+		<a href="webdev.html">Web Developer</a>
+		<a href="blog.html">Blog</a>
+		<a href="contact.html">Contact</a>
+	</nav>
 	<main>
 		<p>This website is a work in progress, a first draft of a portfolio site that will eventually live at www.kate.codes</p>
 		<br>
 		<p>I am currently a web development student at Dev Bootcamp, and as I expand my skills this website will improve and get ever closer to a portfolio/resume site I can be proud of.</p>
 	</main>
+	<img src="https://static.pexels.com/photos/36990/pexels-photo-large.jpg" alt="A woman coding.">
+	<p>Photo from Pexels.com</p>
 
 </body>
 </html>
