--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,13 @@
 	<header>
 		<h1>Resume</h1>
 	</header>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="resume.html">Resume</a>
+		<a href="webdev.html">Web Developer</a>
+		<a href="blog.html">Blog</a>
+		<a href="contact.html">Contact</a>
+	</nav>
 	<p>I will adapt <a href="https://gist.github.com/katekourbatova/cd99e6c77a34316892cd">this gist</a> into a resume, shorten it and add style elements.</p>
 </body>
 </html>
