--- a/success-contact.html
+++ b/success-contact.html
@@ -4,7 +4,14 @@
 	<title>Contact - Thank you!</title>
 </head>
 <body>
-<p>Thank you for reaching out.</p>
-<p><strong>NOTE:</strong> this is not yet a functional form. Please contact me via <a href="https://www.linkedin.com/in/katekourbatova">LinkedIn</a> or <a href="https://twitter.com/SirKate">Twitter</a> for the time being.</p>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="resume.html">Resume</a>
+		<a href="webdev.html">Web Developer</a>
+		<a href="blog.html">Blog</a>
+		<a href="contact.html">Contact</a>
+	</nav>
+	<p>Thank you for reaching out.</p>
+	<p><strong>NOTE:</strong> this is not yet a functional form. Please contact me via <a href="https://www.linkedin.com/in/katekourbatova">LinkedIn</a> or <a href="https://twitter.com/SirKate">Twitter</a> for the time being.</p>
 </body>
 </html>
