--- a/webdev.html
+++ b/webdev.html
@@ -7,6 +7,13 @@
 	<header>
 		<h1>Web Development Progress Report</h1>
 	</header>
+		<nav>
+		<a href="index.html">Home</a>
+		<a href="resume.html">Resume</a>
+		<a href="webdev.html">Web Developer</a>
+		<a href="blog.html">Blog</a>
+		<a href="contact.html">Contact</a>
+	</nav>
 	<p>This will include:</p>
 	<ul>
 		<li>classes I've taken</li>
