Add forgotten nav bar to blog page, fix formatting in web developer page, tweak dimensions of text area in contact page.

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,13 @@
 	<header>
 		<h1>Blog</h1>
 	</header>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="resume.html">Resume</a>
+		<a href="webdev.html">Web Developer</a>
+		<a href="blog.html">Blog</a>
+		<a href="contact.html">Contact</a>
+	</nav>
 	<main>
 		<p>This page may eventually house a blog where I post about my experiences as I enter the tech industry. Feminist and queer commentary is also not out of the question.</p>
 	</main>
