--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,8 @@
 		<fieldset>
 			<div>
 				<label>Your question: </label>
-				<textarea placeholder="What's on your mind?" maxlength="1500" rows="5"></textarea>
+				<br>
+				<textarea placeholder="What's on your mind?" maxlength="1500" rows="5" cols="50"></textarea>
 			</div>
 		</fieldset>
 		<button type="submit">Send</button>
