Create stylesheet, link it to all existing html pages, and put in a test rule turning background pink to make sure it is linked correctly.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Kate's Portfolio - Home</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<header>
