--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Contact me</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<header>
