--- a/success-contact.html
+++ b/success-contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Contact - Thank you!</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<nav>
