--- a/webdev.html
+++ b/webdev.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Web Development Progress Report</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<header>
