Add header to success-contact landing page, add footer to every html page.

--- a/blog.html
+++ b/blog.html
@@ -18,5 +18,7 @@
 	<main>
 		<p>This page may eventually house a blog where I post about my experiences as I enter the tech industry. Feminist and queer commentary is also not out of the question.</p>
 	</main>
+	<footer>All content by Kate Kourbatova. All images from <a href="http://www.pexels.com">pexels.com</a>.
+	</footer>
 </body>
 </html>
