--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
 		<li>Misses opportunities to use semantic html (an address tag, a nav tag)</li>
 		<li>On my laptop, with Chrome in full screen mode, the entire contents of the website sit on the left half of the screen. Maybe could be more responsive to the size of the window.</li>
 	</ul>
+	
+	<footer>All content by Kate Kourbatova. All images from <a href="http://www.pexels.com">pexels.com</a>.
+	</footer>
 </body>
 </html>
