--- a/resume.html
+++ b/resume.html
@@ -16,5 +16,8 @@
 		<a href="contact.html">Contact</a>
 	</nav>
 	<p>I will adapt <a href="https://gist.github.com/katekourbatova/cd99e6c77a34316892cd">this gist</a> into a resume, shorten it and add style elements.</p>
+
+	<footer>All content by Kate Kourbatova. All images from <a href="http://www.pexels.com">pexels.com</a>.
+	</footer>
 </body>
 </html>
