--- a/success-contact.html
+++ b/success-contact.html
@@ -5,6 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<header>
+		<h1>Thank you for getting in touch</h1>
+	</header>
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="resume.html">Resume</a>
@@ -14,5 +17,7 @@
 	</nav>
 	<p>Thank you for reaching out.</p>
 	<p><strong>NOTE:</strong> this is not yet a functional form. Please contact me via <a href="https://www.linkedin.com/in/katekourbatova">LinkedIn</a> or <a href="https://twitter.com/SirKate">Twitter</a> for the time being.</p>
+	<footer>All content by Kate Kourbatova. All images from <a href="http://www.pexels.com">pexels.com</a>.
+	</footer>
 </body>
 </html>
