--- a/webdev.html
+++ b/webdev.html
@@ -22,5 +22,8 @@
 		<li>interesting problems I've solved</li>
 	</ul>
 	<p>Eventually, this page will turn into a portfolio page.</p>
+
+	<footer>All content by Kate Kourbatova. All images from <a href="http://www.pexels.com">pexels.com</a>.
+	</footer>
 </body>
 </html>
