Add style to footer, contact info disclaimer, site comparison section, links, etc

--- a/index.html
+++ b/index.html
@@ -16,29 +16,32 @@
 		<a href="contact.html">Contact</a>
 	</nav>
 	<img src="https://static.pexels.com/photos/36990/pexels-photo-large.jpg" alt="A woman coding.">
-	<p>Photo from Pexels.com</p>
+	
 	<main>
 		<p>This website is a work in progress, a first draft of a portfolio site that will eventually live at www.kate.codes</p>
-		<br>
+		
 		<p>I am currently a web development student at Dev Bootcamp, and as I expand my skills this website will improve and get ever closer to a portfolio/resume site I can be proud of.</p>
 	</main>
 
-	<h2>Similar site comparison</h2>
-	<p>I took a look at a front-end web developer's portfolio site for comparison: <a href="http://judahstevenson.com/index.html">judahstevenson.com</a></p>
-	<h3>Good</h3>
-	<ul>
-		<li>Clean design</li>
-		<li>Resume includes links like I want mine to</li>
-		<li>There is a skills and work history page that is very web-readable, and an option to view a more traditional resume</li>
-	</ul>
-	<h3>Could be improved</h3>
-	<ul>
-		<li>The alt text on the images is not very descriptive, would not be too useful to someone with a screenreader. Some images don’t have alt text at all.</li>
-		<li>Misses opportunities to use semantic html (an address tag, a nav tag)</li>
-		<li>On my laptop, with Chrome in full screen mode, the entire contents of the website sit on the left half of the screen. Maybe could be more responsive to the size of the window.</li>
-	</ul>
-	
-	<footer>All content by Kate Kourbatova. All images from <a href="http://www.pexels.com">pexels.com</a>.
-	</footer>
+	<section id="site-comparison">
+		<h2>Similar site comparison</h2>
+		<p>I took a look at a front-end web developer's portfolio site for comparison: <a href="http://judahstevenson.com/index.html">judahstevenson.com</a></p>
+		<h3>Good</h3>
+		<ul>
+			<li>Clean design</li>
+			<li>Resume includes links like I want mine to</li>
+			<li>There is a skills and work history page that is very web-readable, and an option to view a more traditional resume</li>
+		</ul>
+		<h3>Could be improved</h3>
+		<ul>
+			<li>The alt text on the images is not very descriptive, would not be too useful to someone with a screenreader. Some images don’t have alt text at all.</li>
+			<li>Misses opportunities to use semantic html (an address tag, a nav tag)</li>
+			<li>On my laptop, with Chrome in full screen mode, the entire contents of the website sit on the left half of the screen. Maybe could be more responsive to the size of the window.</li>
+		</ul>
+	</section>
+	<div id="footer-wrapper">
+		<footer>All content by Kate Kourbatova. All images from <a href="http://www.pexels.com">pexels.com</a>.
+		</footer>
+	</div>
 </body>
 </html>
