--- a/success-contact.html
+++ b/success-contact.html
@@ -16,7 +16,9 @@
 		<a href="contact.html">Contact</a>
 	</nav>
 	<p>Thank you for reaching out.</p>
-	<p><strong>NOTE:</strong> this is not yet a functional form. Please contact me via <a href="https://www.linkedin.com/in/katekourbatova">LinkedIn</a> or <a href="https://twitter.com/SirKate">Twitter</a> for the time being.</p>
+
+	<p class="contact-disclaimer"><strong>NOTE:</strong> this is not yet a functional form. Please contact me via <a href="https://www.linkedin.com/in/katekourbatova">LinkedIn</a> or <a href="https://twitter.com/SirKate">Twitter</a> for the time being.</p>
+	
 	<footer>All content by Kate Kourbatova. All images from <a href="http://www.pexels.com">pexels.com</a>.
 	</footer>
 </body>
