Add media query to make site more responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a href="blog.html">Blog</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<img src="https://static.pexels.com/photos/36990/pexels-photo-large.jpg" alt="A woman coding.">
+	<img src="https://static.pexels.com/photos/36990/pexels-photo-large.jpg" alt="A person coding." id="person-coding">
 	
 	<main>
 		<p>This website is a work in progress, a first draft of a portfolio site that will eventually live at www.kate.codes</p>
